tests/specs/check/reject_string_in_readable_stream_from/main.out
Check [WILDCARD]/main.ts
error: TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'AsyncIterable<string> | (Iterable<string | PromiseLike<string>> & object)'.
ReadableStream.from("string");
                    ~~~~~~~~
    at [WILDCARD]/main.ts:1:21
